fixed layout issues and other bugs

--- a/client/src/Project/components/ProjectExplorerSidebar/ProjectExplorerSidebar.jsx.scss
+++ b/client/src/Project/components/ProjectExplorerSidebar/ProjectExplorerSidebar.jsx.scss
@@ -12,3 +12,16 @@
   width: 22vw;
   overflow-y: auto;
 }
+
+
+.table-list-header-row {
+  background-color: white;
+  text-align: left;
+  top: 0;
+  position: sticky;
+  box-shadow: 0 5px 20px grey;
+}
+
+.bold {
+  font-weight: bold;
+}
